# Ktree

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
design/: obsidian-borrow-plan.md
scripts/: deploy-embed-dev1.sh
sidecar/: build.js  convert.js  embed-launcher.js  embed.js  feishu-sync.js  package-lock.json  package.json
src/: index.html  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  convert.rs  embed.rs  feishu.rs  http.rs  index.rs  ingest.rs  kbmeta.rs  lib.rs  main.rs  mcp.rs  query_parser.rs  scheduler.rs  search.rs  state.rs  store.rs  textproc.rs  vcs.rs  webui.html
web-clipper/: README.md  manifest.json  popup.html  popup.js
