[package]
name = "ktree"
version = "0.1.18"
description = "Ktree knowledge base server"
authors = ["YvoStudio"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.77"

[lib]
name = "ktree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
tantivy-jieba = "0.11.0"
jieba-rs = "0.7"
# 语义向量:进程内 ONNX 推理(bge-small-zh-v1.5),替代 Node embed sidecar。
ort = "=2.0.0-rc.12"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"
mime_guess = "2"
tauri-plugin-updater = "2.0.0-rc.4"
tauri-plugin-process = "2.0.0-rc.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
